tests/file_test/testdata/unicode_escape_value_too_large.llang
let s = "abc\u{deadbeef}def";
